Update "Work" landing page with a new look. Relocate timesheet search and project locator to the Work landing page. New project creation now uses the generic ORMS dialog. Removed the "Shop" landing page. Moved the "My Business" links out of "Customize" and into "Work". "Customize" is now "Account Center", "Organize" is now "Calendar", "Upload and Store" is now "Files". "Socialize" is now "Friends".

--- a/css/gecko.css
+++ b/css/gecko.css
@@ -1645,3 +1645,10 @@ a.button:active span {
 	font-size:12px;
 }
 
+.LandingHeaderText
+{
+	font-weight:lighter; 
+	font-size:16px; 
+	color:#2957A2; 
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+}
