--- a/trunk/css/gecko.css
+++ b/trunk/css/gecko.css
@@ -1645,3 +1645,10 @@ a.button:active span {
 	font-size:12px;
 }
 
+.LandingHeaderText
+{
+	font-weight:lighter; 
+	font-size:16px; 
+	color:#2957A2; 
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+}
