--- a/trunk/css/gecko.css
+++ b/trunk/css/gecko.css
@@ -103,11 +103,12 @@
 a {
 	text-decoration:none;
 	color:#000000;
+	font-size:12px;
+	font-family:Tahoma, Verdana, Arial, Helvetica, sans-serif
 }
 a:hover {
-	color:#3399CC;
-	text-decoration: underline;
-	}
+	color:#2957a2;
+}
 
 .inputText {
 	border:1px solid #999999;
@@ -1645,5 +1646,5 @@ a.button:active span {
 	font-weight:lighter; 
 	font-size:16px; 
 	color:#2957A2; 
-	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-family:"Segoe UI", Verdana, Arial, Helvetica, sans-serif;
 }
