--- a/trunk/css/gecko.css
+++ b/trunk/css/gecko.css
@@ -1480,6 +1480,14 @@ label {
 	font-size:10px;
 }
 
+.OH_PREFERENCE_PANEL {
+	margin:10px;
+	font-family:'Segoe UI',Tahoma,Verdana,Arial,Helvetica,sans-serif;
+	font-size:12px;
+	height:180px;	
+	overflow:auto;
+}
+
 	.pretty-table
 	{
 	  padding: 0;
@@ -1644,7 +1652,9 @@ a.button:active span {
 	margin-left:auto;
 	margin-right:auto;	
 	margin-bottom:auto;
-	-moz-border-radius:8px;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
 	border:3px solid #999999;
 	padding:0px;
 	background-color:white;
